--- a/Sports Capstone/Sports Capstone/Sports Capstone.csproj
+++ b/Sports Capstone/Sports Capstone/Sports Capstone.csproj
@@ -168,12 +168,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\BasketballController.cs" />
-    <Compile Include="Controllers\GolfController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PlayerController.cs" />
-    <Compile Include="Controllers\SoccerController.cs" />
+    <Compile Include="Controllers\SportController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -185,12 +183,28 @@
     <Compile Include="Migrations\201910221503075_InitMigration.Designer.cs">
       <DependentUpon>201910221503075_InitMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910231421295_Addedthingstoplayersmodel.cs" />
+    <Compile Include="Migrations\201910231421295_Addedthingstoplayersmodel.Designer.cs">
+      <DependentUpon>201910231421295_Addedthingstoplayersmodel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910231447413_changedModelBackToOriginal.cs" />
+    <Compile Include="Migrations\201910231447413_changedModelBackToOriginal.Designer.cs">
+      <DependentUpon>201910231447413_changedModelBackToOriginal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910231540412_AddedSportsModel.cs" />
+    <Compile Include="Migrations\201910231540412_AddedSportsModel.Designer.cs">
+      <DependentUpon>201910231540412_AddedSportsModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910231933173_Newmigration.cs" />
+    <Compile Include="Migrations\201910231933173_Newmigration.Designer.cs">
+      <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Player.cs" />
-    <Compile Include="Models\Sports.cs" />
+    <Compile Include="Models\Sport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -253,6 +267,9 @@
     <Content Include="Views\Player\View.cshtml" />
     <Content Include="Views\Player\Create.cshtml" />
     <Content Include="Views\Player\Index.cshtml" />
+    <Content Include="Views\Sport\Sport.cshtml" />
+    <Content Include="Views\Sport\Index.cshtml" />
+    <Content Include="Views\Player\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -276,6 +293,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910221503075_InitMigration.resx">
       <DependentUpon>201910221503075_InitMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910231421295_Addedthingstoplayersmodel.resx">
+      <DependentUpon>201910231421295_Addedthingstoplayersmodel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910231447413_changedModelBackToOriginal.resx">
+      <DependentUpon>201910231447413_changedModelBackToOriginal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910231540412_AddedSportsModel.resx">
+      <DependentUpon>201910231540412_AddedSportsModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910231933173_Newmigration.resx">
+      <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
