--- a/Sports Capstone/Sports Capstone/Sports Capstone.csproj
+++ b/Sports Capstone/Sports Capstone/Sports Capstone.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\201910231933173_Newmigration.Designer.cs">
       <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910232001320_ChangedPlayerModel.cs" />
+    <Compile Include="Migrations\201910232001320_ChangedPlayerModel.Designer.cs">
+      <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -270,6 +274,7 @@
     <Content Include="Views\Sport\Sport.cshtml" />
     <Content Include="Views\Sport\Index.cshtml" />
     <Content Include="Views\Player\Details.cshtml" />
+    <Content Include="Views\Sport\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -305,6 +310,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910231933173_Newmigration.resx">
       <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910232001320_ChangedPlayerModel.resx">
+      <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
