--- a/Sports Capstone/Sports Capstone/Sports Capstone.csproj
+++ b/Sports Capstone/Sports Capstone/Sports Capstone.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PlayerController.cs" />
+    <Compile Include="Controllers\PlayingEventController.cs" />
     <Compile Include="Controllers\SportController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -203,11 +204,16 @@
     <Compile Include="Migrations\201910232001320_ChangedPlayerModel.Designer.cs">
       <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910241635351_AddedPlayingEventModel.cs" />
+    <Compile Include="Migrations\201910241635351_AddedPlayingEventModel.Designer.cs">
+      <DependentUpon>201910241635351_AddedPlayingEventModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\PlayingEvent.cs" />
     <Compile Include="Models\Sport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -276,6 +282,8 @@
     <Content Include="Views\Player\Details.cshtml" />
     <Content Include="Views\Sport\Create.cshtml" />
     <Content Include="Views\Sport\Details.cshtml" />
+    <Content Include="Views\PlayingEvent\Create.cshtml" />
+    <Content Include="Views\PlayingEvent\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -314,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910232001320_ChangedPlayerModel.resx">
       <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910241635351_AddedPlayingEventModel.resx">
+      <DependentUpon>201910241635351_AddedPlayingEventModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
