--- a/Sports Capstone/Sports Capstone/Sports Capstone.csproj
+++ b/Sports Capstone/Sports Capstone/Sports Capstone.csproj
@@ -176,41 +176,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201910221355383_InitialCreate.cs" />
-    <Compile Include="Migrations\201910221355383_InitialCreate.Designer.cs">
-      <DependentUpon>201910221355383_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201910242050389_Init.cs" />
+    <Compile Include="Migrations\201910242050389_Init.Designer.cs">
+      <DependentUpon>201910242050389_Init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201910221503075_InitMigration.cs" />
-    <Compile Include="Migrations\201910221503075_InitMigration.Designer.cs">
-      <DependentUpon>201910221503075_InitMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910231421295_Addedthingstoplayersmodel.cs" />
-    <Compile Include="Migrations\201910231421295_Addedthingstoplayersmodel.Designer.cs">
-      <DependentUpon>201910231421295_Addedthingstoplayersmodel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910231447413_changedModelBackToOriginal.cs" />
-    <Compile Include="Migrations\201910231447413_changedModelBackToOriginal.Designer.cs">
-      <DependentUpon>201910231447413_changedModelBackToOriginal.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910231540412_AddedSportsModel.cs" />
-    <Compile Include="Migrations\201910231540412_AddedSportsModel.Designer.cs">
-      <DependentUpon>201910231540412_AddedSportsModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910231933173_Newmigration.cs" />
-    <Compile Include="Migrations\201910231933173_Newmigration.Designer.cs">
-      <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910232001320_ChangedPlayerModel.cs" />
-    <Compile Include="Migrations\201910232001320_ChangedPlayerModel.Designer.cs">
-      <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910241635351_AddedPlayingEventModel.cs" />
-    <Compile Include="Migrations\201910241635351_AddedPlayingEventModel.Designer.cs">
-      <DependentUpon>201910241635351_AddedPlayingEventModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201910241916343_AddedToThePlayingEventModel.cs" />
-    <Compile Include="Migrations\201910241916343_AddedToThePlayingEventModel.Designer.cs">
-      <DependentUpon>201910241916343_AddedToThePlayingEventModel.cs</DependentUpon>
+    <Compile Include="Migrations\201910242129003_AddedToThePlayingEventModel.cs" />
+    <Compile Include="Migrations\201910242129003_AddedToThePlayingEventModel.Designer.cs">
+      <DependentUpon>201910242129003_AddedToThePlayingEventModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -306,32 +278,11 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201910221355383_InitialCreate.resx">
-      <DependentUpon>201910221355383_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910242050389_Init.resx">
+      <DependentUpon>201910242050389_Init.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910221503075_InitMigration.resx">
-      <DependentUpon>201910221503075_InitMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910231421295_Addedthingstoplayersmodel.resx">
-      <DependentUpon>201910231421295_Addedthingstoplayersmodel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910231447413_changedModelBackToOriginal.resx">
-      <DependentUpon>201910231447413_changedModelBackToOriginal.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910231540412_AddedSportsModel.resx">
-      <DependentUpon>201910231540412_AddedSportsModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910231933173_Newmigration.resx">
-      <DependentUpon>201910231933173_Newmigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910232001320_ChangedPlayerModel.resx">
-      <DependentUpon>201910232001320_ChangedPlayerModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910241635351_AddedPlayingEventModel.resx">
-      <DependentUpon>201910241635351_AddedPlayingEventModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201910241916343_AddedToThePlayingEventModel.resx">
-      <DependentUpon>201910241916343_AddedToThePlayingEventModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910242129003_AddedToThePlayingEventModel.resx">
+      <DependentUpon>201910242129003_AddedToThePlayingEventModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
